# gles2pp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt
example/res/: fragment_shader.frag  vertex_shader.vert
example/src/: Example.cpp
include/gles2pp/: Buffer.hpp  Exception.hpp  Miscellaneous.hpp  Object.hpp  Program.hpp  Shader.hpp  ShaderAttachment.hpp  Texture.hpp  Types.hpp  gles2pp.hpp
include/gles2pp/easy/: Buffer.hpp  Program.hpp  Shader.hpp  Texture2D.hpp  Uniform.hpp  VertexAttribute.hpp
src/: Buffer.cpp  Exception.cpp  Miscellaneous.cpp  Program.cpp  Shader.cpp  ShaderAttachment.cpp  Texture.cpp
src/easy/: Buffer.cpp  Shader.cpp  Texture2D.cpp
